bdd/fixtures/valid/functions_basic.at
// Basic function definitions and calls
package functions;

// Simple function with parameters
pub fn add(a: int, b: int) -> int {
    return a + b;
}

// Function with no parameters
pub fn get_constant(none) -> int {
    return 42;
}

// Function returning void
pub fn print_number(n: int) -> void {
    print(n);
    return ();
}

// Private helper function
priv fn multiply(x: int, y: int) -> int {
    return x * y;
}

// Main entry point
pub fn main(none) -> void {
    let sum: int = add(5, 3);
    print_number(sum);
    
    let constant: int = get_constant();
    print_number(constant);
    
    let product: int = multiply(4, 7);
    print_number(product);
    
    return ();
}